ethenic page path added

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </a></div>
             
             <div class="categories">
-                <a href="./categories pages/women.html">
+                <a href="./categories pages/ethenic.html">
                 <img src="./images/women ethenic.jpg" class="categories-card"  />
                 <h class="categories-card-title">women Ethenic</h>
             </a></div>
