correct spelling mistake

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </head>
 <body class="body">
     <div align="center" class="top-heading">
-    <marquee width="60%" class="rtc"><h1><b>WELL-COME TO RTC FASHION CLUB</b></h1></marquee></div>
+    <marquee width="60%" class="rtc"><h1><b>WEL-COME TO RTC FASHION CLUB</b></h1></marquee></div>
     <div class="navbar">
         <a href="./pages/sign-up.html"><h3> Sign up &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;</h3></a>
 
@@ -187,19 +187,19 @@
         <div class="categories">
             <a href="./categories pages/mens.html">
                 <img src="./images/menswere.jpg" class="categories-card" />
-                <h class="categories-card-title">Mens Were</h>
+                <h class="categories-card-title">Men's Wear</h>
             </a></div>
             
             <div class="categories">
                 <a href="./categories pages/women.html">
                 <img src="./images/women ethenic.jpg" class="categories-card"  />
-                <h class="categories-card-title">women Ethenic</h>
+                <h class="categories-card-title">Women Ethenic</h>
             </a></div>
             
             <div class="categories">
             <a href="./categories pages/kids.html">
                 <img src="./images/kids were.jpg" class="categories-card" />
-                <h class="categories-card-title">Kids were</h>
+                <h class="categories-card-title">Kids wear</h>
             </a></div>
 
             <div class="categories">
@@ -211,7 +211,7 @@
             <div class="categories">
             <a href="./categories pages/jewellary.html">
                 <img src="./images/jewellary.jpg" class="categories-card" />
-                <h class="categories-card-title">Jewellary</h>
+                <h class="categories-card-title">Jewellery</h>
             </a></div></div></div>
         <!-- second division-->
         <div class="categories-container-2">
@@ -224,7 +224,7 @@
             <div class="categories">
             <a href="./categories pages/footwere.html">
                 <img src="./images/footwere.jpg" class="categories-card" />
-                <h class="categories-card-title">Footwere</h>
+                <h class="categories-card-title">Footwear</h>
             </a></div>
 
             <div class="categories">
@@ -236,7 +236,7 @@
             <div class="categories">
             <a href="./categories pages/winter.html">
                 <img src="./images/winter were.jpg" class="categories-card" />
-                <h class="categories-card-title">Winter Were</h>
+                <h class="categories-card-title">Winter Wear</h>
             </a></div></div></div>
             <div>
           </div>
