modified home page

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="categories">
             <a href="./categories pages/mens.html">
                 <img src="./images/menswere.jpg" class="categories-card" />
-                <h class="categories-card-title">Men's Wear</h>
+                <h class="categories-card-title">Men's wear</h>
             </a></div>
             
             <div class="categories">
@@ -236,7 +236,7 @@
             <div class="categories">
             <a href="./categories pages/winter.html">
                 <img src="./images/winter were.jpg" class="categories-card" />
-                <h class="categories-card-title">Winter Weagitr</h>
+                <h class="categories-card-title">Winter Wear</h>
             </a></div></div></div>
             <div>
           </div>
