--- a/ethenic.html
+++ b/ethenic.html
@@ -346,46 +346,46 @@
 
 <div class="Ethenic_Wear_For_Women_1">
    
-       <div class="card"><a href="jacket.html"><img class="images" src="./jacket/j.png"></a>
+       <div class="card"><a href="jacket.html"><img class="images" src="./ethenics/jacket/j.png"></a>
               <button class="buttons">Jacket's</button>
        </div>
-        <div class="card">  <a href="tops.html"><img class="images" src="./tops/t.png"></a>
+        <div class="card">  <a href="tops.html"><img class="images" src="./ethenics/tops/t.png"></a>
              <button class="buttons">Top's</button>
         </div>
-         <div class="card"> <a href="shirts.html"><img class="images" src="./shirts/sh1.png"></a>
+         <div class="card"> <a href="shirts.html"><img class="images" src="./ethenics/shirts/sh1.png"></a>
              <button class="buttons">Shirt's</button>
         </div>
-        <div class="card"> <a href="tshirt.html"><img class="images" src="./T.png"></a>
+        <div class="card"> <a href="tshirt.html"><img class="images" src="./ethenics/"></a>
              <button class="buttons">T-Shirts</button>
          </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_2 ">
-      <div class="card"> <a href="saree.html"><img class="images" src="./ethenics/saree/s1.png"></a>
+      <div class="card"> <a href="saree.html"><img class="images" src=".//ethenics/saree/s1.png"></a>
             <button class="buttons">Saree</button>
       </div> 
-      <div class="card">  <a href="kurta.html"><img class="images" src="./images/ethenics/kurta/k1.npg.png"></a>
+      <div class="card">  <a href="kurta.html"><img class="images" src="./ethenics/kurta/k1.npg.png"></a>
            <button class="buttons">Kurtas</button>
       </div>
-      <div class="card">  <a href="lehenga.html"><img class="images" src="./lehenga/lh1.png"></a>
+      <div class="card">  <a href="lehenga.html"><img class="images" src="./ethenics/lehenga/lh1.png"></a>
           <button class="buttons">Lehenga</button>
     </div>
-    <div class="card"><a href="dress.html"><img class="images" src="./Dressses/dresses.png"></a>
+    <div class="card"><a href="dress.html"><img class="images" src="./ethenics/Dressses/dresses.png"></a>
          <button class="buttons">Dresses</button>
     </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_3">
-        <div class="card"><a href="plaso.html"><img class="images" src="./plaso/p1.png"></a>
+        <div class="card"><a href="plaso.html"><img class="images" src="./ethenics/plaso/p1.png"></a>
             <button class="buttons">Plaso's</button>
       </div>
-          <div class="card"><a href="leggings.html"><img class="images" src="./leggings/l1.png"></a>
+          <div class="card"><a href="leggings.html"><img class="images" src="./ethenics/leggings/l1.png"></a>
             <button class="buttons">Laggings</button>
        </div> 
-       <div class="card"> <a href="jence.html"><img class="images" src="./jence/g1.png"></a>
+       <div class="card"> <a href="jence.html"><img class="images" src="./ethenics/jence/g1.png"></a>
             <button class="buttons">jence</button>
       </div>
-      <div class="card"> <a href="dhoti.html"><img class="images" src="./Dhoties/dhoti.png"></a>
+      <div class="card"> <a href="dhoti.html"><img class="images" src="./ethenics/Dhoties/dhoti.png"></a>
         <button class="buttons">Nightdress</button>
     </div>
 </div>
