--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <a href="./pages in navbar/addtocart.html">
                  <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
 
+                 <a href="/pages in navbar/sign-up.html">
+                    <h3 class="sign-in">&nbsp; sign in &nbsp; &nbsp;  </h3>
+                </a>
+
                  <a href="./pages in navbar/return.html"><h3 class="return-order">Return Order</h3></a>
         </div>
         
@@ -73,7 +77,7 @@
             <div class="categories">
                 <a href="./categories pages/acessories.html">
                 <img src="./images/acessories.jpg" class="categories-card"  />
-                <h class="categories-card-title">Acessories</h>
+                <h class="categories-card-title">Accessories</h>
             </a></div>
             
             <div class="categories">
