--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a></div>
             
             <div class="categories">
-                <a href="./categories pages/ethenic.html">
+                <a href="./ethenic_files/ethenic.html">
                 <img src="./images/women ethenic.jpg" class="categories-card"  />
                 <h class="categories-card-title">Women Ethenic</h>
             </a></div>
