add all changes

--- a/ethenic_files/ethenic.html
+++ b/ethenic_files/ethenic.html
@@ -346,7 +346,7 @@
 
 <div class="Ethenic_Wear_For_Women_1">
    
-       <div class="card"><a href="jacket.html"><img class="images" src="./ethenics/jacket/j.png"></a>
+       <div class="card"><a href="jacket.html"><img class="images" src="./ethenics/jacket/j1.png"></a>
               <button class="buttons">Jacket's</button>
        </div>
         <div class="card">  <a href="tops.html"><img class="images" src="./ethenics/tops/t.png"></a>
@@ -355,13 +355,13 @@
          <div class="card"> <a href="shirts.html"><img class="images" src="./ethenics/shirts/sh1.png"></a>
              <button class="buttons">Shirt's</button>
         </div>
-        <div class="card"> <a href="tshirt.html"><img class="images" src="./ethenics/"></a>
+        <div class="card"> <a href="tshirt.html"><img class="images" src="./ethenics/tshirt/T.png"></a>
              <button class="buttons">T-Shirts</button>
          </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_2 ">
-      <div class="card"> <a href="saree.html"><img class="images" src=".//ethenics/saree/s1.png"></a>
+      <div class="card"> <a href="saree.html"><img class="images" src="./ethenics/saree/s1.png"></a>
             <button class="buttons">Saree</button>
       </div> 
       <div class="card">  <a href="kurta.html"><img class="images" src="./ethenics/kurta/k1.npg.png"></a>
