--- a/ethenic_files/ethenic.html
+++ b/ethenic_files/ethenic.html
@@ -3,15 +3,27 @@
 <head>
     <title>Page Title</title>
     <style>
-        .navbar{
-    background-color: rgb(21, 21, 111);
-    height: 50px;
+        .rtc{
+    background-color: rgb(212, 227, 239);
+    height: 60px;
+    border-radius: 10px;
+    border-style: double;
+              position: relative;
+              background-color: #aebfc9;
+              border-color: azure;
+              border-radius: 20px;
+}
+    .navbar{
+    background-color:  #00304b;
+
+    height: 60px;
     align-items: center;
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 5px;
     padding-bottom: 5px;
     display:flex;
+    margin-top: 30px;
     flex-direction: row;
     justify-content: space-between;
     position: sticky;
@@ -325,12 +337,84 @@
             margin-top: 50px;
           
         }
+        .eight{
+   position: relative;
+  background-color: #00304b;
+   height: 350px;
+}
+.ssss{
+   position: absolute;
+   height: 60px;
+   width: 60px;
+   margin-left: 50px;
+   top: 40px;
+
+}
+.sa{
+   position: absolute;
+   top: 25px;
+   margin-left: 120px;
+   color: #e6e6ff;
+}
+.sb{
+   position: absolute;
+   top: 90px;
+   margin-left: 50px;
+   color: #e6e6ff;
+   font-size: 20px;
+}
+.sc{
+   position: absolute;
+  color: #e6e6ff;
+  margin-left: 400px;
+  top: 25px;
+ 
+  
+}
+.sd{
+   position: absolute;
+   color: #e6e6ff;
+  margin-left: 400px;
+  top:90px;
+  font-size: 20px;
+}
+.scc{
+   position: absolute;
+  color: #e6e6ff;
+  margin-left: 700px;
+  top: 25px;
+}
+.ssc{
+   position: absolute;
+   color: #e6e6ff;
+  margin-left: 700px;
+  top:90px;
+  font-size: 20px;
+
+}
+.sccc{
+   position: absolute;
+  color: #e6e6ff;
+  margin-left: 1000px;
+  top: 25px;
+}
+.sscc{
+   position: absolute;
+   color: #e6e6ff;
+  margin-left: 1000px;
+  top:90px;
+  font-size: 20px;
+
+}
+
     </style>
 
 
 </head>
 <body class="body">
    
+    <div align="center" class="top-heading">
+        <marquee width="60%" class="rtc"><h1><b>WEL-COME TO RTC FASHION CLUB</b></h1></marquee></div>
      
     <div class="navbar">
 
@@ -495,8 +579,32 @@
       </div>
 </div>
 
-    <div class="footer">
+<div class="eight">
+    <img src="ss.png" class="ssss">
+    <h1 class="sa">Online Shopping</h1>
+    <p class="sb">  Affordable Computer Science<br>
+        Education For Eveyone.  We<br>  Provide Quality courses which<br> are 
+      tusted by 1500+<br>
+        students</p>
 
-    </div>
+    <h1 class="sc"> Quick Links</h1>
+   <p class="sd">home<br>   search <br>  contact <br>  about</p>
+
+   <h1 class="scc">Learn</h1>
+   <p class="ssc"> Data Structure <br>FullStack Development <br>C Programming<br>C++ Programming</p>
+
+   <h1 class="sccc">Contact Us</h1>
+   <p class="sscc">Nagpur, Maharashtra<br>Ahemadanagar Maharashtra<br>suaraj@roadtocode.org</p>
+   <p align="center" style="color: #e6e6ff; position: absolute; bottom: 0%; margin-left: 500px;">Copright © Road To Code 2022.</p>
+   <img src="123.png" style="position: absolute; color: #e6e6ff; height: 20px;width:20px; margin-left: 960px; top:110px;">
+   <img src="t.png" style="position: absolute; color: #e6e6ff; height: 20px;width:20px; margin-left: 960px; top:135px;">
+   <img src="m.png" style="position: absolute; color: #e6e6ff; height: 20px;width:20px; margin-left: 960px; top:160px;">
+
+
+   <img src="y.png" style="position: absolute; color: #e6e6ff; height: 23px;width:23px; margin-left: 1150px; top:230px;">
+
+   <img src="g.png" style="position: absolute; color: #e6e6ff; height: 20px;width:20px; margin-left: 1100px; top:230px;">
+   <img src="i.png" style="position: absolute; color: #e6e6ff; height: 20px;width:20px; margin-left: 1050px; top:230px;">
+</div>
 </body>
 </html>
