card details added

--- a/ethenic_files/jacket.html
+++ b/ethenic_files/jacket.html
@@ -313,58 +313,117 @@
          <button class="buttons">Buy Now</button>
        </div>
         <div class="card"> <img class="images" src="./ethenics/jacket/jacket2.png">
+          <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
              <button class="buttons">Buy Now</button>
         </div>
          <div class="card"><img class="images" src="./ethenics/jacket/jacket3.png">
-
+          <h3 class="h4">sangriya</h3>
+          <p class="paragraph">monochrome open front jacket<br>
+           Rs 799 <del>1100</del>
+          </p>
              <button class="buttons">Buy Now</button>
         </div>
         <div class="card"><img class="images" src="./ethenics/jacket/jacket4.png"></a>
+          <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
              <button class="buttons">Buy Now</button>
          </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_2 ">
       <div class="card"><img class="images" src="./ethenics/jacket/jacket5.png"></a>
+        <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
             <button class="buttons">Buy Now</button>
       </div> 
       <div class="card"><img class="images" src="./ethenics/jacket/jacket6.png"></a>
+        <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
            <button class="buttons">Buy Now</button>
       </div>
       <div class="card"> <img class="images" src="./ethenics/jacket/jacket7.png"></a>
+        <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
           <button class="buttons">Buy Now</button>
     </div>
     <div class="card"><img class="images" src="./ethenics/jacket/jacket8.png"></a>
+      <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
          <button class="buttons">Buy Now</button>
     </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_3">
         <div class="card"><img class="images" src="./ethenics/jacket/jacket9.png"></a>
+          <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
             <button class="buttons">Buy Now</button>
       </div>
           <div class="card"><img class="images" src="./ethenics/jacket/jacket10.png"></a>
+            <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
             <button class="buttons">Buy Now</button>
        </div> 
        <div class="card"><img class="images" src="./ethenics/jacket/jacket11.png"></a>
+        <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
             <button class="buttons">Buy Now</button>
       </div>
       <div class="card"> <img class="images" src="./ethenics/jacket/jacket12.png"></a>
+        <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
         <button class="buttons">Buy Now</button>
     </div>
 </div>
 
 <div class="Ethenic_Wear_For_Women_2 ">
     <div class="card"><img class="images" src="./ethenics/jacket/jacket13.png"></a>
+      <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
           <button class="buttons">Buy Now</button>
     </div> 
     <div class="card"><img class="images" src="./ethenics/jacket/jacket14.png"></a>
+      <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
          <button class="buttons">Buy Now</button>
     </div>
     <div class="card"> <img class="images" src="./ethenics/jacket/jacket15.png"></a>
+      <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
         <button class="buttons">Buy Now</button>
   </div>
   <div class="card"><img class="images" src="./ethenics/jacket/jacket16.png"></a>
+    <h3 class="h4">sangriya</h3>
+           <p class="paragraph">monochrome open front jacket<br>
+            Rs 799 <del>1100</del>
+           </p>
        <button class="buttons">Buy Now</button>
   </div>
 </div>
