--- a/ethenic_files/ethenic.html
+++ b/ethenic_files/ethenic.html
@@ -563,7 +563,7 @@
             <button class="buttons">jence</button>
       </div>
       <div class="card"> <a href="dhoti.html"><img class="images" src="./ethenics/Dhoties/dhoti.png"></a>
-        <button class="buttons">Nightdress</button>
+        <button class="buttons">Dhoti</button>
     </div>
 </div>
 
@@ -572,10 +572,10 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="home.html">⬅ Previous</a>
+              <a class="btn" href="in.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
-            <a class="btn" href="plaso.html"> Next ➡ </a>
+            <a class="btn" href="jacket.html"> Next ➡ </a>
       </div>
 </div>
 
