--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -144,7 +144,7 @@
                 <img src="./images/user.png" class="profile" />
              </a>
     
-             <a href="./pages in navbar/.index.html">
+             <a href="../index.html">
                 <img src="./images/home.png" class="home" />
              </a>
             <form id="form"> 
