Kids Category added

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -104,12 +104,12 @@
       }
       .card img {
         margin-left: 50px;
-        margin-top: 20px;
+        margin-top: 10px;
         justify-content: center;
         justify-items: center;
         box-shadow:  2px 2px 2px 2px#e67fe0;
         width: 150px;
-        height: 200px;
+        height: 180px;
       }
       .card-content {
         padding: 25px;
@@ -117,7 +117,7 @@
       .card-title {
         text-align: center;
         font-size: 24px;
-        margin: 10px 0;
+        margin: 10px;
       }
       .card-price {
         text-align: center;
