--- a/pages in navbar/home.html
+++ b/pages in navbar/home.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="./css/style.css" media="all"/>
 </head>
 <body>
-    <a href="/index.html"></a>
+    <a href="../index.html"></a>
 </body>
 </html>
