added cards to winter.html

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -112,25 +112,43 @@
         height: 200px;
       }
       .card-content {
-        padding: 25px;
+        padding: 6px;
       }
       .card-title {
         text-align: center;
+      text-shadow:1px 2px #333;
         font-size: 24px;
-        margin: 10px 0;
+        margin: 4px;
+      font-weight: 200;
       }
       .card-price {
+        margin: 7px;
         text-align: center;
-        font-size: 18px;
+        font-size: 24px;
         margin-bottom: 10px;
+        font-weight: 800px;
       }
       .buy-button {
         display: block;
         width: 100%;
         padding: 10px;
         background-color: #8abce3;
+        color: #0e0d0d;
+        border: none;
+        font-size: 16px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      .Add-to-cart{
+        display: block;
+        margin-top: 5px;
+        width: 100%;
+        padding: 10px;
+        background-color: #d86bc4;
         color: #333;
         border: none;
+        font-size: 16px;
+        font-weight: 400;
         border-radius: 5px;
         cursor: pointer;
       }
@@ -180,6 +198,7 @@
               <h2 class="card-title">Kid's Wear</h2>
               <p class="card-price">Price rs 499/-</p>
               <button class="buy-button">Buy Now</button>
+              <button class="Add-to-cart">Add to cart</button>
             </div>
       </div>
       <div class="card">
@@ -188,6 +207,7 @@
           <h2 class="card-title">Kid's Wear </h2>
           <p class="card-price">Price rs 499/-</p>
           <button class="buy-button">Buy Now</button>
+          <button class="Add-to-cart">Add to cart</button>
         </div>
   </div>
   <div class="card">
@@ -196,6 +216,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -204,6 +225,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -212,6 +234,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -220,6 +243,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -228,6 +252,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -236,6 +261,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -244,6 +270,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -252,6 +279,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -260,6 +288,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -268,6 +297,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -276,6 +306,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -284,6 +315,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -292,6 +324,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -300,6 +333,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -308,6 +342,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -316,6 +351,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -324,6 +360,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -332,6 +369,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -340,6 +378,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -348,6 +387,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -356,6 +396,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -364,6 +405,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -372,6 +414,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -380,6 +423,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -388,6 +432,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -396,6 +441,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -404,6 +450,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -412,6 +459,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -420,6 +468,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -428,6 +477,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -436,6 +486,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -444,6 +495,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -452,6 +504,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -460,6 +513,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -468,6 +522,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -476,6 +531,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -484,6 +540,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -492,6 +549,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -500,6 +558,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -508,6 +567,7 @@
       <h2 class="card-title">Kid's Wear 1</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -516,6 +576,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -524,6 +585,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -532,6 +594,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -540,6 +603,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -548,6 +612,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -556,6 +621,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -564,6 +630,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -572,6 +639,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -580,6 +648,7 @@
       <h2 class="card-title">Kid's Wear</h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -588,6 +657,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -596,6 +666,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
 <div class="card">
@@ -604,6 +675,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 499/-</p>
       <button class="buy-button">Buy Now</button>
+      <button class="Add-to-cart">Add to cart</button>
     </div>
 </div>
  </div>
