--- a/index.html
+++ b/index.html
@@ -180,21 +180,24 @@
             <img src="./images/Bag Banner.jpg" class="offer-img"></a>
     </div>
     </div>
+   
     <!--footer-->
-
-    <div class="footer">
-
-
-        <a href="mailto:tinukohare@gmail.com">
-            <img src="./images/email.png" alt="E-mail" class="footer-logo" />
-
-        </a><br>
-        <a href="tel:+91-8459562384">
-            <img src="./images/call.png" alt="Call" class="footer-logo">
+            
+<div class="footer">
+    <h2 class="about">ABOUT</h2><br>
+    <p class="about-list">Contact Us<br>About Us
 
 
-    </div>
+    <h2 class="help"> HELP</h2>
+    <p class="help-list">Payments<br> Shiping <br>Customer Service <br> FAQ</p>
 
+    <h2 class="policy"> POLICY</h2>
+    <p class="policy-list">return Policy<br>Terms Of Use <br> Security <br> Privacy</p>
+
+    
+    <h2 class="social"> SOCIAL</h2>
+    <p class="social-list">Facebook<br>Twitter <br>You Tube</p>
+</div>
 
 </body>
 
