--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
    <h2 class="about">CONTACT</h2><br>
     <p class="about-list"><a href="mailto:tinukohare@gmail.com" class="anc">
         <img src="./images/email.png" height="30px" alt="E-mail"/>
-        E-mail: hotelkohare@gmail.com
+        E-mail: rtcfashionclub@gmail.com
     </a><br>
     <a href="tel:+91-8459562384" class="anc">
         <img src="./images/call.png" height="30px" alt="Call"/>
