--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="./pages in navbar/addtocart.html">
                 <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
 
-            <a href="/pages in navbar/sign-up.html" class="categories-1">
+            <a href="../pages in navbar/sign-in.html" class="categories-1">
                 <h3 class="sign-in">&nbsp;&nbsp; Sign&nbsp;in&nbsp;&nbsp;</h3>
             </a>
 
