--- a/ethenic_files/tshirt.html
+++ b/ethenic_files/tshirt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>RTC FASHION CLUB</title>
     <style>
        .top-heading{
         margin-top: 50px;
